--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.3"
   }
 }
