--- a/backend/package.json
+++ b/backend/package.json
@@ -15,16 +15,26 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
+    "npm": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.2"
   }
 }
