--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "meantow",
+  "name": "meantwo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,15 +20,21 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "bootscrap": "^0.1.0",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "csurf": "^1.10.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "rxjs": "~7.8.0",
+    "ts-node-dev": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
