--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "styles.css",
+              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
@@ -89,10 +89,6 @@
             "assets": [
               "src/favicon.ico",
               "assets"
-            ],
-            "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "styles.css"
             ],
             "scripts": []
           }
